@@ -13,6 +13,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
@@ -25,11 +27,14 @@ public class RegistrationScreen implements Screen {
 
     private Scanner scanner;
 
+    private ArrayList<String> validScreens;
+
+
     private MerchantService merchantService;
 
     private UserService userService;
 
-    private List<String> validScreens;
+//    private List<String> validScreens;
 
     private Merchant merchant;
     private User user;
@@ -40,7 +45,10 @@ public class RegistrationScreen implements Screen {
         this.scanner = scanner;
         this.merchantService = merchantService;
         this.userService = userService;
-        validScreens = List.of("login", "dummy");
+
+//        validScreens= (ArrayList<String>) Arrays.asList("login", "dummy");
+
+        validScreens= new ArrayList<>(Arrays.asList(Constants.LOGIN));
 
     }
 
@@ -48,7 +56,7 @@ public class RegistrationScreen implements Screen {
     @Override
     public boolean render(ScreenFactory screenFactory) {
         boolean success = false;
-        LOGGER.info("***REGISTRATION Screen****");
+        LOGGER.info("***REGISTRATION****");
         LOGGER.info("use : for additional navigation");
         try {
             String input = "";
@@ -70,7 +78,7 @@ public class RegistrationScreen implements Screen {
                 String name = scan(scanner);
                 String email = scan(scanner);
                 String password = scan(scanner);
-                User user = userService.registerUser(name, email, password);
+                User user = userService.registerUser(name, email, password,"","");
                 success = user!=null;
             }
 
